--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,9 +11,12 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Deo Sunandar 18.02.0337"/>
+        android:text="Ini MainActivity"/>
+
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/btn_login"/>
+        android:id="@+id/bt_logout"
+        android:text="Log out"/>
+
 </LinearLayout>
