--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Ini MainActivity"/>
+        android:text="Deo Sunadar 18.02.0337"/>
 
     <Button
         android:layout_width="wrap_content"
